--- a/Parrot/res/values/strings.xml
+++ b/Parrot/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_parrot_main">ParrotMain</string>
+    
+    <string name="Btn_start">Start</string>
+    <string name="Btn_adjust">Adjust</string>
 
 </resources>
